k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-app
  template:
    metadata:
      labels:
        app: eks-app
    spec:
      containers:
        - name: eks-app
          image: 820242908024.dkr.ecr.us-east-1.amazonaws.com/eks-devops-platform-app:c870f8743ceee2d1d4bfdfc2479434085df3839c
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
