k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: eks.hasankadado.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eks.hasankadado.com
      secretName: eks-app-tls
  rules:
    - host: eks.hasankadado.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-app-service
                port:
                  number: 80
